fixed box spacing

--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@
 }
 
 .box{
-    border: 2px solid hwb(0 0% 100%);
+    border: black 2px solid;
     border-radius: 15%;
     background-color: white;
     width: 220px;
@@ -56,30 +56,30 @@
     margin-top: 60px;
     text-align: center;
     font-family: cochin;
-    line-height: 450%;
-    font-size: 40px;
-    box-shadow: 10px 10px 5px grey;
-    text-shadow: #c0e0ef 4  px 4px 4px;
-    font-weight: ;
+    line-height: 500%;
+    font-size: 35px;
+    box-shadow: 5px 5px 5px grey;
+    text-shadow: #c0e0ef 4px 4px 6px;
+    font-weight:bold;
 }
 
 .box:hover{
     cursor: pointer;
     transform: scale(1.1);  
     transition: transform 0.5s;
+    box-shadow: 10px 10px 5px grey;
+
 }
 
 .boxes{
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items:center;
     display: flex;
     flex-direction: row;
-    gap: 10px;
     margin-left: 5%;
     margin-right: 5%;
     flex-wrap: wrap;
 }
-
 
 
 .laptop-container {
